--- a/frontend/style/style.css
+++ b/frontend/style/style.css
@@ -1,6 +1,14 @@
+/* Registrar la fuente personalizada */
+@font-face {
+  font-family: 'MiFuente';
+  src: url('Race\ Sport.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   height: 100vh;
-  font-family: 'Helvetica', sans-serif;
+  font-family: 'MiFuente', sans-serif;
   margin: 0;
   background: #fefaf3;
   color: #111;
@@ -109,6 +117,12 @@ section h2 {
 .card-content {
   padding: 15px;
   text-align: center;
+}
+
+.card-content .card-text {
+  color: #b89e51;
+  font-size: 20px; 
+  font-weight: bold; 
 }
 
 .card-title {
@@ -271,8 +285,8 @@ footer {
 }
 
 .social-icon {
-  width: 24px;
-  height: 24px;
+  width: 50px;
+  height: 50px;
   margin-right: 5px;
 }
 
